--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
     max-width: 1440px;
     min-height: 652px;
     /* margin-top: 131px; */
-    margin-bottom: 4462px;
+    margin-bottom: 70px;
 }
 .profile-image{
     width: 240.28px;
     height: 240px;
-    margin-top: 0px;
-    margin: 0 auto 0;
+    margin: 0 auto;
+    margin-top: 20px;
+
 }
 .profile-image img{
     width: 100%;
@@ -25,7 +26,6 @@
     height: 582px;
     margin: 0 auto;
     padding: 0;
-    margin-top: 157px;
     margin-bottom: 4506px;
     text-align: center;
     display: flex;
@@ -63,10 +63,10 @@
     position: static;
 }
 .header-btn{
-    width: 250px;
-    height: 66px;
+    width: 240px;
+    height: 60px;
     margin: 35px 0;
-    padding: 21px 24px;
+    padding: 15px 18px;
     background-color: rgb(13,19,33);
     border: none;
     border-radius: 12px;
@@ -76,4 +76,126 @@
     flex: none;
     letter-spacing: 0%;
     color: rgb(255,255,255);
+}
+.details-section{
+    width: 830px;
+    height: 900px;
+    margin: 0 auto;
+    /* bottom: 2993px; */
+    display: flex;
+    flex-direction:column;
+    justify-content: flex-start;
+    padding: 60px 90px;
+    border-radius: 18px;
+    background: rgba(13, 19, 33, 0.02);
+    margin-bottom: 70px;
+}
+.details-content{
+    width: 900px;
+    height: 115px;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+    align-items: center;
+    position: static;
+}
+.detail-title{
+    width: 900px;
+    height: 39px;
+    padding: 0;
+    flex: none;
+    align-self: stretch;
+    text-align: center;
+    color: rgb(13,19,33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    letter-spacing: 0%;
+}
+.detail-para{
+    width: 860px;
+    height: 75px;
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 24px;
+    text-align: left;
+    align-items: center;
+    align-self: stretch;
+    opacity: 0.7;
+    color: rgb(13,19,33);
+    font-family: Azeret Mono;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    flex: none;
+}
+.details-box{
+    margin: 80px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.div1-design{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    gap: 65px;
+    margin-top: 20px;
+    padding: 18px 20px;
+    background: linear-gradient(90.00deg,rgb(255,255,255), rgb(255,255,255,0) 100%);
+    border-radius: 16px;
+}
+.div2-design{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    gap: 65px;
+    margin-top: 20px;
+    padding: 18px 20px;
+    background: linear-gradient(90.00deg, rgb(255,255,255,0), rgb(255,255,255) 100%);
+    border-radius: 16px;
+}
+.div1-content{
+    width: 440px;
+    height: 174.01px;
+}
+.div1-title{
+    color: rgb(13,19,33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.div1-para{
+    color: rgb(13,19,33);
+    font-family: Azeret Mono;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 4px 0;
+    opacity: 0.7;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.div1-btn{
+    width: 150px;
+    height: 42px;
+    padding: 10px 16px;border: 1px solid rgb(13,19,33);
+    opacity: 0.7;
+}
+.div1-image{
+    width: 259.56px;
+    height: 175.01px;
+    left: 0.36%;
+    right: -0.36%;
+}
+.div1-image img{
+    width: 100%;
+    height: 100%;
 }
