--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@
     flex: none;
 }
 .details-box{
-    margin: 80px 0;
+    margin: 60px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -198,4 +198,67 @@
 .div1-image img{
     width: 100%;
     height: 100%;
+}
+.inspiration-section{
+    width: 1000px;
+    height: 633px;
+    margin: 0 auto;
+    margin-top: 5px;
+    margin-bottom: 110px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.inpiration-content{
+    width: 780px;
+    height: 110px;
+    margin: 0px 0px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.inspi-title{
+    color: rgb(13,19,33);
+    font-family: Azeret Mono;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center; 
+    flex: none;
+}
+.inspi-para{
+    color: rgb(13,19,33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center; 
+    align-self: stretch;
+    margin: 24px 0;
+    opacity: 0.7;
+    flex: none;
+}
+.inspiration-video{
+    width: 1000px;
+    height: 480px;
+    margin-top: 40px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.07);
+    border-radius: 16px;
+}
+.inspiration-video iframe{
+    width: 920px;
+    height: 430px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    align-self: stretch;
+    border-radius: 16px;
+    flex-grow: 0;
+    flex: none;
 }
