--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
     width: 998px;
     height: 136px;
     font-family: Azeret Mono;
-    font-size: 48px;
+    font-size: 42px;
     line-height: 68px;
     font-weight: 800;
     margin: 24px 0px;
@@ -63,25 +63,27 @@
     position: static;
 }
 .header-btn{
-    width: 240px;
+    width: 270px;
     height: 60px;
     margin: 35px 0;
     padding: 15px 18px;
     background-color: rgb(13,19,33);
     border: none;
     border-radius: 12px;
+    flex: none;
+}
+.header-btn a{
+    color: rgb(255,255,255);
     font-family: Azeret Mono;
     font-weight: 600px;
     font-size: 20px;
-    flex: none;
     letter-spacing: 0%;
-    color: rgb(255,255,255);
+    text-decoration: none;
 }
 .details-section{
     width: 830px;
-    height: 900px;
+    height: 880px;
     margin: 0 auto;
-    /* bottom: 2993px; */
     display: flex;
     flex-direction:column;
     justify-content: flex-start;
@@ -367,4 +369,87 @@
     align-self: stretch;
     flex: none;
     text-decoration: underline;
+}
+.feedback-section{
+    width: 1000px;
+    height: 250px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    background-image: url(./assets/handshake.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: rgba(0, 0, 0, .4);
+    background-blend-mode: overlay;
+    border-radius: 16px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.feedback-box{
+    width: 900px;
+    height: 150px;
+    margin: 0 auto;
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+}
+.feedback-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.feedbck-tile{
+    color: rgb(255,255,255);
+    font-family: Azeret Mono;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.feedback-para{
+    width: 650px;
+    color: rgb(255,255,255);
+    font-family: Azeret Mono;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: left; 
+    align-self: stretch;
+    margin: 0 auto;
+    margin-top: 16px;
+    margin-bottom: 5px;
+    opacity: 0.7;
+}
+.feedback-inputbox{
+    align-items: center;
+    width: 548px;
+    height: 40px;
+    margin: 0 auto;
+    margin-top: 14px;
+}
+#feedback{
+    width: 75%;
+    height: 100%;
+    border-radius: 8px;
+    border: none;
+    padding: 0 8px;
+}
+#submit-btn{
+    background-color: rgb(255,255,255);
+    color: black;
+    font-family: Azeret Mono;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    padding: 8px 15px;
+    margin: 0 5px;
+    border: none;
+    border-radius: 8px;
 }
