--- a/style.css
+++ b/style.css
@@ -453,3 +453,34 @@
     border: none;
     border-radius: 8px;
 }
+
+.footer-section{
+    width: 1240px;
+    height: 32px;
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(13, 19, 33, 0.03);
+    border-radius: 16px;
+    padding: 32px 50px;
+}
+.footer-title{
+    color: rgb(13,19,33);
+    font-family: Azeret Mono;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-left: 70px;
+}
+.footer-icon{
+    width: 180px;
+    text-align: center;
+    margin-right: 70px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
